# bit-stl

./: .appveyor.yml  .clang_tidy  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Readme.md  annotated.html  array_view.hpp  assert.hpp  base_types.hpp  bimap.hpp  casts.hpp  checked.hpp  classes.html  conanfile.py  config.hpp  data_watcher.hpp  delegate.hpp  dir_0739f90fa72e6cd6fb4631f6ab84b626.html  dir_0d136d990a2c2fc69752823039be9885.html  dir_13f5c32b7edf042aead996db3186fa4a.html  dir_17e4543e787d055e62ddb5af683ee5c5.html  dir_18e3d3a0a7cc6d5eef287377142fa0c1.html  dir_223bf54f88e5f68f59faa538957b7467.html  dir_24e65d80a204d5a913e5384fea4d8b7e.html  dir_26b5e64ffdb38a7f039ee0c2e82e6a12.html  dir_29fcf11c04de3337cd59d4097052cbe7.html  dir_42975c9a33effee9b443b3908b8d1122.html  dir_42f7df96d8d5da5c7291d8e3eaf457f1.html  dir_461c17f383b2d17c9e243ef359e4d5a9.html  dir_4af15ab774f0f05b0a2c91cfe904cd37.html  dir_4b5e7c59de1be31dd2d9dfab52657244.html  dir_4e7c8c4fc0d923782da8a23d70a9725b.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_60ec4b1ecf122f57b029f1e1b654f194.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_65301edd3e1ecf38a5f85ff8743c3cf0.html  dir_6a8199e5cc4c765543eae94f43ca8a0e.html  (+125 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
CMake/Templates/: PackageConfigVersion.cmake.in
cmake/Templates/: PackageConfigVersion.cmake.in  version.hpp.in
cmake/modules/: MakeVersionHeader.cmake
d0/d06/: structbit_1_1stl_1_1are__equality__comparable.html
d0/d07/: classbit_1_1stl_1_1dynamic__index__constant_3_01dynamic__index_00_01_idx_01_4-members.html
d0/d0e/: structbit_1_1stl_1_1uniform__function_3_01_r_07_c_1_1_5_08_07_args_8_8_8_08_01const_01volatile_01_6_6_01_4-members.html
d0/d11/: structbit_1_1stl_1_1has__member__type__iterator.html
d0/d12/: is__explicitly__convertible_8hpp.html  is__explicitly__convertible_8hpp_source.html
d0/d14/: numeric_8inl_source.html
d0/d1d/: classbit_1_1stl_1_1optional.html
d0/d21/: classbit_1_1stl_1_1compressed__pair.html  dynamic__size__constant_8hpp_source.html  structbit_1_1stl_1_1are__random__access__iterators.html
d0/d2e/: structbit_1_1stl_1_1disable__if.html
d0/d2f/: structbit_1_1stl_1_1bad__narrow__cast.html
d0/d30/: classbit_1_1stl_1_1utf8__string__iterator.html
d0/d31/: structbit_1_1stl_1_1remove__pointers_3_01_t_01_5const_01volatile_01_4-members.html
d0/d3d/: is__derived__from__all_8hpp.html  is__derived__from__all_8hpp_source.html
d0/d52/: group__stl.html
d0/d5a/: match__ref__qualifiers_8hpp.html  match__ref__qualifiers_8hpp_source.html
d0/d68/: delegate_8hpp.html  delegate_8hpp_source.html
d0/d77/: structbit_1_1stl_1_1remove__member__function__pointer__volatile_3_01_r_07_t_1_1_5_08_07_args_8_8_8_08_01volatile_01_4-members.html
d0/d80/: structbit_1_1stl_1_1has__member__type__const__reference.html
d0/d92/: structbit_1_1stl_1_1remove__member__function__pointer__volatile.html
d0/d95/: classbit_1_1stl_1_1set__view.html  structbit_1_1stl_1_1is__one__of_3_01_t_00_01_t_00_01_ts_8_8_8_01_4.html
d0/d96/: classbit_1_1stl_1_1scoped__ptr.html
d0/d9a/: structbit_1_1stl_1_1tuple__size_3_01compressed__tuple_3_01_types_8_8_8_01_4_01_4.html
d0/da5/: structbit_1_1stl_1_1has__member__type__const__iterator.html
d0/dac/: _sequence_container_8hpp.html  _sequence_container_8hpp_source.html  array__view_8inl_source.html
d0/db1/: structbit_1_1stl_1_1nullopt__t-members.html
d0/db4/: hashed__string_8hpp_8cpp_source.html
d0/db9/: macosx_8hpp_source.html
d0/dba/: map__view_8hpp.html  map__view_8hpp_source.html
d0/dbb/: classbit_1_1stl_1_1lazy.html
d0/dc1/: structbit_1_1stl_1_1is__size__constant.html
d0/dc9/: classbit_1_1stl_1_1tribool.html
d0/dd0/: structbit_1_1stl_1_1index__of__type.html
d0/dde/: structbit_1_1stl_1_1function__argument_3_01_i_00_01_r_07_types_8_8_8_08_01volatile_01_4.html
d0/de0/: structbit_1_1stl_1_1nullopt__t.html
d0/de6/: structbit_1_1stl_1_1uniform__function_3_01_r_07_c_1_1_5_08_07_args_8_8_8_08_01volatile_01_6_01_4.html
d0/de7/: circular__deque_8hpp.html  circular__deque_8hpp_source.html
d0/dea/: classbit_1_1stl_1_1bad__expected__access-members.html
d0/dee/: structbit_1_1stl_1_1is__same__sign.html
d0/def/: classbit_1_1stl_1_1expected-members.html  is__one__of_8hpp.html  is__one__of_8hpp_source.html
d0/df0/: monostate_8hpp.html  (+1 more)
detail/: array_view.inl  casts.inl  delegate.inl  functional.inl  hashed_string_view.inl  iterator.inl  lazy.inl  map_view.inl  memory.inl  numeric.inl  optional.inl  pointer_iterator.inl  set_view.inl  span.inl  string_tokenizer.inl  string_view.inl  utility.inl
doc/: CMakeLists.txt  Doxyfile
docs/: CMakeLists.txt  Doxyfile.in
internal/: config.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+79 more)
test/: CMakeLists.txt  main.test.cpp
test/bit/stl/: array_view.test.cpp  delegate.test.cpp  expected.test.cpp  hashed_string_view.test.cpp  lazy.test.cpp  memory.test.cpp  set_view.test.cpp  span.test.cpp  string_tokenizer.test.cpp  string_view.test.cpp  tribool.test.cpp  type_traits.test.cpp  utility.compressed_pair.test.cpp  variant.test.cpp
test/bit/stl/containers/: array_view.test.cpp  circular_buffer.test.cpp  circular_deque.test.cpp  circular_queue.test.cpp  hashed_string_view.test.cpp  set_view.test.cpp  span.test.cpp  string_view.test.cpp
test/bit/stl/memory/: exclusive_ptr.test.cpp  memory.test.cpp
test/bit/stl/utilities/: compressed_pair.test.cpp  delegate.test.cpp  expected.test.cpp  lazy.test.cpp  scope_guard.test.cpp  tribool.test.cpp  type_traits.test.cpp  utility.compressed_pair.test.cpp  variant.test.cpp
test_package/: CMakeLists.txt  conanfile.py
(+1286 files in other folders)
